--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.20</version>
-        </dependency>
-
+       <dependency> 			
+     <groupId>mysql</groupId> 		
+	<artifactId>mysql-connector-java</artifactId> 		
+	<scope>runtime</scope> 		
+            </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
